# Spider2-leo

./: .gitignore  GEMINI.md
methods/deepseek-dspy-agent/: README.md  deepseek_agent.py  example.py  gepa_optimizer.py  get_spider2lite_submission_data.py  pyproject.toml  requirements.txt  run.py  run.sh  test_imports.py  test_run.py
spider2-lite/: run_sqlite_agent.py
spider2-lite/evaluation_suite/: evaluate.py
